--- a/HWYZ/Views/ReportOfSend/ListOfStore.cshtml
+++ b/HWYZ/Views/ReportOfSend/ListOfStore.cshtml
@@ -1,6 +1,6 @@
 ﻿@using HWYZ.Models;
 <div class="table-responsive" id="datatable">
-    <table class="table table-hover table-bordered">
+    <table class="table table-bordered table-striped table-condensed">
         <thead>
             <tr>
                 <td width="50%">采购单位</td>
