--- a/HWYZ/Views/Users/Index.cshtml
+++ b/HWYZ/Views/Users/Index.cshtml
@@ -2,28 +2,32 @@
 @using HWYZ.Models;
 @model PagedList<Guser>
 
-<div class="panel panel-default">
-    <div class="panel-body">
-        <div class="row">
-            <div class="col-md-4">
-                @using (Ajax.BeginForm("Index", new RouteValueDictionary { { "id", "" } }, new AjaxOptions { UpdateTargetId = "container", InsertionMode = InsertionMode.Replace }, new { @id = "form_query" }))
-                {
-                    <div class="input-group">
-                        <input type="text" class="form-control" name="key" placeholder="请输入姓名或身份证号" aria-describedby="basic-addon2">
-                        <span class="input-group-addon" style="cursor: pointer;" id="basic-addon2">查询</span>
+<div class="row mt">
+    <div class="col-lg-12">
+        <div class="content-panel panel panel-default">
+            <div class="panel-body">
+                <div class="row" style="margin-bottom: 15px;">
+                    <div class="col-md-4">
+                        @using (Ajax.BeginForm("Index", new RouteValueDictionary { { "id", "" } }, new AjaxOptions { UpdateTargetId = "container", InsertionMode = InsertionMode.Replace }, new { @id = "form_query" }))
+                        {
+                            <div class="input-group">
+                                <input type="text" class="form-control" name="key" placeholder="请输入姓名或身份证号" aria-describedby="basic-addon2">
+                                <span class="input-group-addon" style="cursor: pointer;" id="basic-addon2">查询</span>
+                            </div>
+                        }
                     </div>
-                }
+                    <div class="col-md-7">
+                        <button class="btn btn-info" type="button" style="float: right;" data-toggle="modal" data-target="#dlg_edit">添加</button>
+                    </div>
+                </div>
+                <section id="unseen">
+                    <div id="container">
+                        @Html.Partial("List", Model)
+                    </div>
+                </section>
+                <div class="modal fade" id="dlg_edit" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+                </div>
             </div>
-            <div class="col-md-7">
-                <button class="btn btn-info" type="button" style="float: right;" data-toggle="modal" data-target="#dlg_edit">添加</button>
-            </div>
-        </div>
-        <div class="row">
-            <div id="container">
-                @Html.Partial("List", Model)
-            </div>
-        </div>
-        <div class="modal fade" id="dlg_edit" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
         </div>
     </div>
 </div>
