--- a/HWYZ/Views/Dictionary/NodesList.cshtml
+++ b/HWYZ/Views/Dictionary/NodesList.cshtml
@@ -1,7 +1,7 @@
 ﻿@using HWYZ.Models;
 
 <div class="table-responsive">
-    <table class="table table-hover table-bordered">
+    <table class="table table-bordered table-striped table-condensed">
         <thead>
             <tr>
                 <td>名称</td>
