--- a/HWYZ/Views/Locations/Index.cshtml
+++ b/HWYZ/Views/Locations/Index.cshtml
@@ -2,27 +2,30 @@
 @using HWYZ.Models;
 @model PagedList<Location>
 
-<div class="panel panel-default">
-    <div class="panel-body">
-        <div class="row">
-            <div class="col-md-4">
-                @using (Ajax.BeginForm("Index", new RouteValueDictionary { { "id", "" } }, new AjaxOptions { UpdateTargetId = "container", InsertionMode = InsertionMode.Replace }, new { @id = "form_query" }))
-                {
-                    <div class="input-group">
-                        <input type="text" class="form-control" name="key" placeholder="请输入客户姓名或电话" aria-describedby="basic-addon2">
-                        <span class="input-group-addon" style="cursor: pointer;" id="basic-addon2">查询</span>
+<div class="row mt">
+    <div class="col-lg-12">
+        <div class="content-panel panel panel-default">
+            <div class="panel-body">
+                <div class="row" style="margin-bottom: 15px;">
+                    <div class="col-md-4">
+                        @using (Ajax.BeginForm("Index", new RouteValueDictionary { { "id", "" } }, new AjaxOptions { UpdateTargetId = "container", InsertionMode = InsertionMode.Replace }, new { @id = "form_query" }))
+                        {
+                            <div class="input-group">
+                                <input type="text" class="form-control" name="key" placeholder="请输入客户姓名或电话" aria-describedby="basic-addon2">
+                                <span class="input-group-addon" style="cursor: pointer;" id="basic-addon2">查询</span>
+                            </div>
+                        }
                     </div>
-                }
+                </div>
+                <section id="unseen">
+                    <div id="container">
+                        @Html.Partial("List", Model)
+                    </div>
+                </section>
+                <div class="modal fade" id="dlg_edit" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div id="container">
-                @Html.Partial("List", Model)
-            </div>
-        </div>
-        <div class="modal fade" id="dlg_edit" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
         </div>
     </div>
 </div>
-
 @{Html.RegisterMvcPagerScriptResource();}
