--- a/HWYZ/Views/ProductDelive/Index.cshtml
+++ b/HWYZ/Views/ProductDelive/Index.cshtml
@@ -5,52 +5,56 @@
 @Styles.Render("~/Scripts/datetimepicker/bootstrap-datetimepicker.min.css")
 @Styles.Render("~/Scripts/select2/select2.css")
 
-<div class="panel panel-default">
-    <div class="panel-body">
-        @using (Ajax.BeginForm("Index", new RouteValueDictionary { { "id", "" } }, new AjaxOptions { UpdateTargetId = "container", InsertionMode = InsertionMode.Replace }, new { @id = "form_query" }))
-        {
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="input-group">
-                        <span class="input-group-addon">订单编号</span>
-                        <input type="text" class="form-control" name="OrderCode" />
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="input-group date form_date" data-date="" data-date-format="yyyy/mm/dd">
-                        <span class="input-group-addon">下单时间起</span>
-                        <input class="form-control" size="16" name="StartDate" type="text" value="" readonly="readonly">
-                        <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
-                        <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="input-group date form_date" data-date="" data-date-format="yyyy/mm/dd">
-                        <span class="input-group-addon">下单时间止</span>
-                        <input class="form-control" size="16" name="EndDate" type="text" value="" readonly="readonly">
-                        <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
-                        <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
-                    </div>
-                </div>
-            </div>
-            <div class="row" style="margin-top: 15px;">
-                @if (UserContext.user.Store == null)
-                {
-                    <div class="col-md-4">
-                        <div class="input-group">
-                            <span class="input-group-addon">采购单位</span>
-                            <input type="hidden" data-select="s" class="_select" style="width: 100%;" name="StoreId" />
+<div class="row mt">
+    <div class="col-lg-12">
+        <div class="content-panel panel panel-default">
+            <div class="panel-body">
+                @using (Ajax.BeginForm("Index", new RouteValueDictionary { { "id", "" } }, new AjaxOptions { UpdateTargetId = "container", InsertionMode = InsertionMode.Replace }, new { @id = "form_query" }))
+                { 
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="input-group">
+                                <span class="input-group-addon">订单编号</span>
+                                <input type="text" class="form-control" name="OrderCode" />
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="input-group date form_date" data-date="" data-date-format="yyyy/mm/dd">
+                                <span class="input-group-addon">下单时间起</span>
+                                <input class="form-control" size="16" name="StartDate" type="text" value="" readonly="readonly">
+                                <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
+                                <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="input-group date form_date" data-date="" data-date-format="yyyy/mm/dd">
+                                <span class="input-group-addon">下单时间止</span>
+                                <input class="form-control" size="16" name="EndDate" type="text" value="" readonly="readonly">
+                                <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
+                                <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                            </div>
                         </div>
                     </div>
+                    <div class="row" style="margin-top: 15px;">
+                        @if (UserContext.user.Store == null)
+                        {
+                            <div class="col-md-4">
+                                <div class="input-group">
+                                    <span class="input-group-addon">采购单位</span>
+                                    <input type="hidden" data-select="s" class="_select" style="width: 100%;" name="StoreId" />
+                                </div>
+                            </div>
+                        }
+                    </div>
                 }
-            </div>
-        }
-        <div class="row" style="margin: 15px 0px 0 0;">
-            <a class="btn btn-info query" style="float: right;" href="javascript:void(0)">查询</a>
-        </div>
-        <div class="row">
-            <div id="container">
-                @Html.Partial("List", Model)
+                <div class="row" style="margin: 15px 0 15px 0;">
+                    <a class="btn btn-info query" style="float: right;" href="javascript:void(0)">查询</a>
+                </div>
+                <section id="unseen">
+                    <div id="container">
+                        @Html.Partial("List", Model)
+                    </div>
+                </section>
             </div>
         </div>
     </div>
@@ -78,9 +82,10 @@
 
         var date = new Date();
         var start = date.getFullYear() + "/" + (date.getMonth() + 1) + "/01";
+        var end = date.getFullYear() + "/" + (date.getMonth() + 1) + "/" + date.getDate();
 
         $("input[name=StartDate]").val(start);
-        $("input[name=EndDate]").val(date.toLocaleDateString());
+        $("input[name=EndDate]").val(end);
 
         $(".query").click(function () {
             $("#form_query").submit();
