--- a/HWYZ/Views/ReportOfSend/ListOfDetail.cshtml
+++ b/HWYZ/Views/ReportOfSend/ListOfDetail.cshtml
@@ -1,11 +1,11 @@
 ﻿@using HWYZ.Models;
 <div class="table-responsive">
-    <table class="table table-hover table-bordered">
+    <table class="table table-bordered table-striped table-condensed">
         <thead>
             <tr>
                 <td>分店</td>
-                <td>产品名称</td>
-                <td>产品编号</td>
+                <td>商品名称</td>
+                <td>商品编号</td>
                 <td>采购总数</td>
             </tr>
         </thead>
