--- a/HWYZ/Views/Roles/List.cshtml
+++ b/HWYZ/Views/Roles/List.cshtml
@@ -1,7 +1,7 @@
 ﻿@using HWYZ.Models;
 
 <div class="table-responsive">
-    <table class="table table-hover table-bordered">
+    <table class="table table-bordered table-striped table-condensed">
         <thead>
             <tr>
                 <td>角色名称</td>
@@ -17,17 +17,16 @@
                     <td>@item.RoleName</td>
                     @if (@item.Status == Status.enable)
                     {
-                        <td>启用</td>
+                        <td><span class="label label-info label-mini">启用</span></td>
                     }
                     else
                     {
-                        <td>未启用</td>
+                        <td><span class="label label-danger label-mini">未启用</span></td>
                     }
 
                     <td data-id="@item.ID">
-                        <a href="javascript:void(0)" class="setRole" data-toggle="modal" data-target="#dlg_edit">设置权限</a>
-                        |
-                        <a href="javascript:void(0)" class="delRole">删除</a>
+                        <button class="btn btn-primary btn-xs setRole" data-toggle="modal" data-target="#dlg_edit"><i class="fa fa-pencil"></i></button>
+                        <button class="btn btn-danger btn-xs delRole"><i class="fa fa-trash-o "></i></button>
                     </td>
                 </tr>
                 }
