--- a/HWYZ/Views/ProductNumber/Add.cshtml
+++ b/HWYZ/Views/ProductNumber/Add.cshtml
@@ -37,6 +37,18 @@
                         <input type="text" name="ProductNumber" class="form-control" />
                     </div>
                 </div>
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">线上售价</span>
+                        <input type="text" name="OnlinePrice" class="form-control" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">线下售价</span>
+                        <input type="text" name="OfflinePrice" class="form-control" />
+                    </div>
+                </div>
             </form>
         </div>
         <div class="modal-footer">
