--- a/HWYZ/Views/ProductNumber/Edit.cshtml
+++ b/HWYZ/Views/ProductNumber/Edit.cshtml
@@ -5,7 +5,7 @@
             <h4 class="modal-title" id="exampleModalLabel">编辑商品</h4>
         </div>
         <div class="modal-body">
-            <form id="form_edit" action="orderedit/editItem" method="post">
+            <form id="form_edit" action="productnumber/editNumber" method="post">
                 <input type="hidden" name="ID" value="@ViewBag.product.ID" />
                 <div class="form-group">
                     <div class="input-group">
@@ -27,8 +27,20 @@
                 </div>
                 <div class="form-group">
                     <div class="input-group">
-                        <span class="input-group-addon">发货数量</span>
-                        <input type="text" name="OrderNumber" class="form-control"   value="@ViewBag.product.ProductNumber"/>
+                        <span class="input-group-addon">配置数量</span>
+                        <input type="text" name="ProductNumber" class="form-control"   value="@ViewBag.product.ProductNumber"/>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">线上售价</span>
+                        <input type="text" name="OnlinePrice" class="form-control" value="@ViewBag.product.OnlinePrice"/>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">线下售价</span>
+                        <input type="text" name="OfflinePrice" class="form-control" value="@ViewBag.product.OfflinePrice"/>
                     </div>
                 </div>
             </form>
